# kasalm

./: README.md
src/backend/: .cursorrules  .env.example  .gitignore  alembic.ini  pyproject.toml  run.sh  run_seeders.py  run_tests.py
src/backend/migrations/: env.py
src/backend/migrations/versions/: 038466d3fd55_remove_result_as_answer_from_agent_model.py  09ed462c60e7_change_flow_id_to_uuid.py  321f0168ea68_update_tool_seeds_with_result_as_answer.py  3254abc_doc_embeddings.py  61d6a53cc4b8_merge_markdown_and_metadata_migrations.py  68d79ef_rename_metadata_column.py  9a54bcd_update_embedding_type.py  add_guardrail_to_task.py  add_markdown_to_tasks.py  b269ffedbee2_add_result_as_answer_to_agent_model.py  be5bfc77b066_update_flow_executions_to_use_uuid_for_.py  f1224c788466_convert_crew_id_to_uuid.py
src/backend/src/: __init__.py  main.py
src/backend/src/api/: __init__.py  agent_generation_router.py  agents_router.py  api_keys_router.py  auth_router.py  connections_router.py  crew_generation_router.py  crews_router.py  databricks_router.py  databricks_secrets_router.py  db_management_router.py  dispatcher_router.py  engine_config_router.py  execution_history_router.py  execution_logs_router.py  execution_trace_router.py  executions_router.py  flow_execution_router.py  flows_router.py  healthcheck_router.py  identity_providers_router.py  logs_router.py  mcp_router.py  memory_router.py  models_router.py  roles_router.py  scheduler_router.py  (+11 more)
src/backend/tests/: README.md  conftest.py  pytest.ini  requirements-test.txt  test_mcp_cli.py  test_mcp_new_auth.py
(+312 files in other folders)
